Annuaire professionnel et tutoriel

--- a/Oasis_Common/Oasis_Common.vbproj
+++ b/Oasis_Common/Oasis_Common.vbproj
@@ -98,7 +98,9 @@
   <ItemGroup>
     <Compile Include="ApiRest\ApiOasis.vb" />
     <Compile Include="ApiRest\Class1.vb" />
+    <Compile Include="Bean\AnnuaireProfessionnel\AnnuaireEtatCivil.vb" />
     <Compile Include="Bean\AnnuaireProfessionnel\annuaireProfessionnel.vb" />
+    <Compile Include="Bean\AnnuaireProfessionnel\AnnuaireProfessionnelReference.vb" />
     <Compile Include="Bean\ANS_NOS\G15_ProfessionSante.vb" />
     <Compile Include="Bean\ANS_NOS\R38_SpecialiteOrdinale.vb" />
     <Compile Include="Bean\ANS_NOS\R40_CompetenceExclusive.vb" />
@@ -177,7 +179,9 @@
     <Compile Include="Dao\Agenda\AppointmentDao.vb" />
     <Compile Include="Dao\ALD\AldCim10Dao.vb" />
     <Compile Include="Dao\ALD\AldDao.vb" />
+    <Compile Include="Dao\AnnuaireProfessionnel\AnnuaireProfessionnelBalDao.vb" />
     <Compile Include="Dao\AnnuaireProfessionnel\AnnuaireProfessionnelDao.vb" />
+    <Compile Include="Dao\AnnuaireProfessionnel\AnnuaireReferenceDao.vb" />
     <Compile Include="Dao\ANS_NOS\G15_ProfessionSanteDao.vb" />
     <Compile Include="Dao\ANS_NOS\R38_SpecialiteOrdinaleDao.vb" />
     <Compile Include="Dao\ANS_NOS\R40_CompetenceExclusiveDao.vb" />
@@ -214,6 +218,7 @@
     <Compile Include="Dao\Parcours\ParcoursConsigneDao.vb" />
     <Compile Include="Dao\Parcours\ParcoursDao.vb" />
     <Compile Include="Dao\Parcours\ParcoursHistoDao.vb" />
+    <Compile Include="Dao\Parcours\SpecialiteDao.vb" />
     <Compile Include="Dao\Patient\PatientDao.vb" />
     <Compile Include="Dao\Patient\PatientNoteDao.vb" />
     <Compile Include="Dao\Patient\PatientNoteDirectiveDao.vb" />
