--- a/oasis/App.config
+++ b/oasis/App.config
@@ -47,6 +47,7 @@
     <add key="FonctionEmetteurAutoId" value="14" />
     <add key="DureeRendezVousParDefaut" value="15" />
     <add key="PeriodeNonDelivrance" value="15" />
+    <add key="UriProcedureTutorielle" value="http://173.199.71.187/doku.php?id=" />
     <add key="SpecialiteDelaiPriseEnCharge" value="90" />
     <add key="ContactAdministrateur" value="En cas de problème contactez l'administrateur au xx xx xx xx xx - Mail : admin.contact@oasis.fr" />
   </appSettings>
