--- a/oasis/Oasis_WF.vbproj
+++ b/oasis/Oasis_WF.vbproj
@@ -288,10 +288,10 @@
     <Compile Include="Form\DRC\RadFAutoSuivi.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form\DRC\RadFDrcAideEnLigne.Designer.vb">
-      <DependentUpon>RadFDrcAideEnLigne.vb</DependentUpon>
+    <Compile Include="Form\Tutoriel\RadFTutoriel.Designer.vb">
+      <DependentUpon>RadFTutoriel.vb</DependentUpon>
     </Compile>
-    <Compile Include="Form\DRC\RadFDrcAideEnLigne.vb">
+    <Compile Include="Form\Tutoriel\RadFTutoriel.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form\Episode\EpisodeUtils.vb" />
@@ -571,6 +571,12 @@
       <DependentUpon>RadFDeclarationAllergieEtCIDetail.vb</DependentUpon>
     </Compile>
     <Compile Include="Form\Traitement\RadFDeclarationAllergieEtCIDetail.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form\Tutoriel\RadFWebBrowser.Designer.vb">
+      <DependentUpon>RadFWebBrowser.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form\Tutoriel\RadFWebBrowser.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form\utilisateur\FrmChangePassword.Designer.vb">
@@ -1029,8 +1035,8 @@
     <EmbeddedResource Include="Form\DRC\RadFAutoSuivi.resx">
       <DependentUpon>RadFAutoSuivi.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form\DRC\RadFDrcAideEnLigne.resx">
-      <DependentUpon>RadFDrcAideEnLigne.vb</DependentUpon>
+    <EmbeddedResource Include="Form\Tutoriel\RadFTutoriel.resx">
+      <DependentUpon>RadFTutoriel.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form\EtatJournalier\FrmEtatJournalier.resx">
       <DependentUpon>FrmEtatJournalier.vb</DependentUpon>
@@ -1157,6 +1163,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form\Traitement\RadFDeclarationAllergieEtCIDetail.resx">
       <DependentUpon>RadFDeclarationAllergieEtCIDetail.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form\Tutoriel\RadFWebBrowser.resx">
+      <DependentUpon>RadFWebBrowser.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form\utilisateur\FrmChangePassword.resx">
       <DependentUpon>FrmChangePassword.vb</DependentUpon>
