--- a/oasis/App.config
+++ b/oasis/App.config
@@ -22,7 +22,7 @@
     </Oasis_WF.My.MySettings>
   </applicationSettings>
   <appSettings>
-    <add key="ServeurOasis" value="ns3119889.ip-51-38-181.eu" />
+    <add key="ServeurOasis" value="api.synovora.com" />
     <add key="horizonTraitementObsolete" value="3" />
     <!--< en années -->
     <add key="longueurStringAllergie" value="12" />
@@ -80,4 +80,19 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <system.serviceModel>
+    <bindings>
+      <customBinding>
+        <binding name="ICIRServiceBinding">
+          <textMessageEncoding messageVersion="Soap12" />
+          <httpsTransport />
+        </binding>
+      </customBinding>
+    </bindings>
+    <client>
+      <endpoint address="https://qualiflps.services-ps.ameli.fr/lps"
+        binding="customBinding" bindingConfiguration="ICIRServiceBinding"
+        contract="ServiceReference1.ICIRService" name="ICIRService" />
+    </client>
+  </system.serviceModel>
 </configuration>
