--- a/oasis/App.config
+++ b/oasis/App.config
@@ -81,18 +81,7 @@
     </assemblyBinding>
   </runtime>
   <system.serviceModel>
-    <bindings>
-      <customBinding>
-        <binding name="ICIRServiceBinding">
-          <textMessageEncoding messageVersion="Soap12" />
-          <httpsTransport />
-        </binding>
-      </customBinding>
-    </bindings>
-    <client>
-      <endpoint address="https://qualiflps.services-ps.ameli.fr/lps"
-        binding="customBinding" bindingConfiguration="ICIRServiceBinding"
-        contract="ServiceReference1.ICIRService" name="ICIRService" />
-    </client>
+    <bindings />
+    <client />
   </system.serviceModel>
 </configuration>
