--- a/Oasis_Common/Oasis_Common.vbproj
+++ b/Oasis_Common/Oasis_Common.vbproj
@@ -149,6 +149,7 @@
     <Compile Include="Bean\PPS\PpsClass.vb" />
     <Compile Include="Bean\PPS\PpsHisto.vb" />
     <Compile Include="Bean\ROR\RorClass.vb" />
+    <Compile Include="Bean\SousEpisode\SousEpisodeReponseMail.vb" />
     <Compile Include="Bean\SousEpisode\SousEpisode.vb" />
     <Compile Include="Bean\SousEpisode\SousEpisodeDetailSousType.vb" />
     <Compile Include="Bean\SousEpisode\SousEpisodeFusion.vb" />
@@ -235,6 +236,7 @@
     <Compile Include="Dao\PPS\PPSHistoCreationDao.vb" />
     <Compile Include="Dao\PPS\PPSHistoDao.vb" />
     <Compile Include="Dao\ROR\RorDao.vb" />
+    <Compile Include="Dao\SousEpisode\SousEpisodeReponseMailDao.vb" />
     <Compile Include="Dao\SousEpisode\SousEpisodeDao.vb" />
     <Compile Include="Dao\SousEpisode\SousEpisodeDetailSousTypeDao.vb" />
     <Compile Include="Dao\SousEpisode\SousEpisodeReponseDao.vb" />
