--- a/Oasis_Web/Oasis_Web.vbproj
+++ b/Oasis_Web/Oasis_Web.vbproj
@@ -1566,7 +1566,7 @@
     <Content Include="Views\Auth\auth-recoverpw.cshtml" />
     <None Include="Views\Auth\auth-register.vbhtml" />
     <Content Include="Views\Dashboard\Index.vbhtml" />
-    <None Include="Views\Shared\Error.vbhtml" />
+    <Content Include="Views\Shared\Error.vbhtml" />
     <Content Include="Views\Shared\Layouts\_layout_boxed.cshtml" />
     <Content Include="Views\Shared\Layouts\_layout_colored_sidebar.cshtml" />
     <Content Include="Views\Shared\Layouts\_layout_compact_sidebar.cshtml" />
@@ -1574,15 +1574,15 @@
     <Content Include="Views\Shared\Layouts\_layout_icon_sidebar.cshtml" />
     <Content Include="Views\Shared\Layouts\_layout_light_sidebar.cshtml" />
     <Content Include="Views\Shared\Layouts\_layout_preloader.cshtml" />
-    <None Include="Views\Shared\_BlankLayout.cshtml" />
+    <Content Include="Views\Shared\_BlankLayout.cshtml" />
     <Content Include="Views\Shared\_footer.vbhtml" />
-    <None Include="Views\Shared\_head_css.cshtml" />
-    <None Include="Views\Shared\_horizontal.vbhtml" />
+    <Content Include="Views\Shared\_head_css.cshtml" />
+    <Content Include="Views\Shared\_horizontal.vbhtml" />
     <Content Include="Views\Shared\_Layout.vbhtml" />
     <Content Include="Views\Shared\_page_title.vbhtml" />
     <Content Include="Views\Shared\_right_sidebar.vbhtml" />
     <Content Include="Views\Shared\_sidebar.vbhtml" />
-    <None Include="Views\Shared\_title_meta.cshtml" />
+    <Content Include="Views\Shared\_title_meta.cshtml" />
     <Content Include="Views\Shared\_topbar.vbhtml" />
     <Content Include="Views\Shared\_vendor_scripts.vbhtml" />
     <Content Include="Views\Pages\pages-404.cshtml" />
