--- a/oasis/App.config
+++ b/oasis/App.config
@@ -52,6 +52,8 @@
     <add key="UrlByDefault" value="http://www.google.com" />
     <add key="SpecialiteDelaiPriseEnCharge" value="90" />
     <add key="ContactAdministrateur" value="En cas de problème contactez l'administrateur au xx xx xx xx xx - Mail : admin.contact@oasis.fr" />
+	<!--< en mois -->
+    <add key="ChaineEpisodePeriode" value="6" />
   </appSettings>
   <system.web>
     <membership defaultProvider="ClientAuthenticationMembershipProvider">
