--- a/oasis/App.config
+++ b/oasis/App.config
@@ -36,7 +36,10 @@
     <add key="limiteAgeEnfant" value="16" />
     <add key="AgeMinPreventionFemme" value="12" />
     <add key="DrcIdGrossesse" value="833" />
-    <add key="ClientSettingsProvider.ServiceUri" value="" />
+	<add key="DrcIdSuiviPrescolaire" value="123024" />
+	<add key="DrcIdSuiviScolaire" value="123025" />
+	<add key="DrcIdGyneco" value="113001" />
+	<add key="ClientSettingsProvider.ServiceUri" value="" />
     <add key="ParametreIdTaille" value="2" />
     <add key="ParametreIdIMC" value="3" />
     <add key="ParametreIdPAM" value="8" />
