--- a/oasis/Oasis_WF.vbproj
+++ b/oasis/Oasis_WF.vbproj
@@ -324,6 +324,12 @@
     <Compile Include="Form\Mail\RadFMailEdit.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Form\Patient\RadFPatientRequest.Designer.vb">
+      <DependentUpon>RadFPatientRequest.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form\Patient\RadFPatientRequest.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Form\RendezVous\RadFListeIntervenantSansRDV.Designer.vb">
       <DependentUpon>RadFListeIntervenantSansRDV.vb</DependentUpon>
     </Compile>
@@ -1123,6 +1129,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form\Mail\RadFMailEdit.resx">
       <DependentUpon>RadFMailEdit.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form\Patient\RadFPatientRequest.resx">
+      <DependentUpon>RadFPatientRequest.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form\RendezVous\RadFListeIntervenantSansRDV.resx">
       <DependentUpon>RadFListeIntervenantSansRDV.vb</DependentUpon>
