--- a/oasis/Oasis_WF.vbproj
+++ b/oasis/Oasis_WF.vbproj
@@ -644,6 +644,12 @@
     <Compile Include="Form\Vaccin\RadFCPV.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Form\Vaccin\RadFOperatorSelect.Designer.vb">
+      <DependentUpon>RadFOperatorSelect.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form\Vaccin\RadFOperatorSelect.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Form\Vaccin\RadFVaccin.Designer.vb">
       <DependentUpon>RadFVaccin.vb</DependentUpon>
     </Compile>
@@ -666,6 +672,12 @@
       <DependentUpon>RadFVaccinInputComment.vb</DependentUpon>
     </Compile>
     <Compile Include="Form\Vaccin\RadFVaccinInputComment.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form\Vaccin\RadFVaccinOperator.Designer.vb">
+      <DependentUpon>RadFVaccinOperator.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form\Vaccin\RadFVaccinOperator.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form\Vaccin\RadFValenceSelecteur.Designer.vb">
@@ -1283,6 +1295,9 @@
     <EmbeddedResource Include="Form\Vaccin\RadFCPV.resx">
       <DependentUpon>RadFCPV.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Form\Vaccin\RadFOperatorSelect.resx">
+      <DependentUpon>RadFOperatorSelect.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form\Vaccin\RadFVaccin.resx">
       <DependentUpon>RadFVaccin.vb</DependentUpon>
     </EmbeddedResource>
@@ -1294,6 +1309,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form\Vaccin\RadFVaccinInputComment.resx">
       <DependentUpon>RadFVaccinInputComment.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form\Vaccin\RadFVaccinOperator.resx">
+      <DependentUpon>RadFVaccinOperator.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form\Vaccin\RadFValenceSelecteur.resx">
       <DependentUpon>RadFValenceSelecteur.vb</DependentUpon>
@@ -1482,6 +1500,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form\Antecedent\FAntecedentOccultesListe.resx">
       <DependentUpon>FAntecedentOccultesListe.vb</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Form\Obsolete\FMedocListe.resx">
       <DependentUpon>FMedocListe.vb</DependentUpon>
