--- a/oasis/Oasis_WF.vbproj
+++ b/oasis/Oasis_WF.vbproj
@@ -989,6 +989,7 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Pdf\PrtCarnetVaccinal.vb" />
+    <Compile Include="Pdf\PrtOrdonnanceVaccin.vb" />
     <Compile Include="Pdf\PrtOrdonnance.vb" />
     <Compile Include="Pdf\PrtSynthese.vb" />
     <Compile Include="Resources\FrenchRichTextBoxStrings.Designer.vb">
