--- a/oasis/App.config
+++ b/oasis/App.config
@@ -6,7 +6,7 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-  <add name="Oasis_WF.My.MySettings.oasisConnection" connectionString="" providerName="System.Data.SqlClient" />
+    <add name="Oasis_WF.My.MySettings.oasisConnection" connectionString="" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
@@ -36,10 +36,10 @@
     <add key="limiteAgeEnfant" value="16" />
     <add key="AgeMinPreventionFemme" value="12" />
     <add key="DrcIdGrossesse" value="833" />
-	<add key="DrcIdSuiviPrescolaire" value="123024" />
-	<add key="DrcIdSuiviScolaire" value="123025" />
-	<add key="DrcIdGyneco" value="113001" />
-	<add key="ClientSettingsProvider.ServiceUri" value="" />
+    <add key="DrcIdSuiviPrescolaire" value="123024" />
+    <add key="DrcIdSuiviScolaire" value="123025" />
+    <add key="DrcIdGyneco" value="113001" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
     <add key="ParametreIdTaille" value="2" />
     <add key="ParametreIdIMC" value="3" />
     <add key="ParametreIdPAM" value="8" />
@@ -55,9 +55,9 @@
     <add key="UrlByDefault" value="http://www.google.com" />
     <add key="SpecialiteDelaiPriseEnCharge" value="90" />
     <add key="ContactAdministrateur" value="En cas de problème contactez l'administrateur au xx xx xx xx xx - Mail : admin.contact@oasis.fr" />
-	<!--< en mois -->
+    <!--< en mois -->
     <add key="ChaineEpisodePeriode" value="6" />
-  </appSettings>
+	<add key="TelerikWinFormsThemeName" value="Classic" /></appSettings>
   <system.web>
     <membership defaultProvider="ClientAuthenticationMembershipProvider">
       <providers>
