--- a/Oasis_Common/Oasis_Common.vbproj
+++ b/Oasis_Common/Oasis_Common.vbproj
@@ -137,6 +137,7 @@
     <Compile Include="Bean\Episode\EpisodeParametre.vb" />
     <Compile Include="Bean\Episode\EpisodeTypeActivite.vb" />
     <Compile Include="Bean\EtatJournalier\EtatJournalier.vb" />
+    <Compile Include="Bean\Internaute\InternauteConnection.vb" />
     <Compile Include="Bean\Internaute\InternautePermission.vb" />
     <Compile Include="Bean\Internaute\Internaute.vb" />
     <Compile Include="Bean\LigneDeVie\LigneDeVie.vb" />
@@ -234,6 +235,7 @@
     <Compile Include="Dao\Episode\EpisodeTypeActiviteDao.vb" />
     <Compile Include="Dao\EtatJournalier\EtatJournalierDao.vb" />
     <Compile Include="Dao\General\ParametreOasisDao.vb" />
+    <Compile Include="Dao\Internaute\InternauteConnectionDao.vb" />
     <Compile Include="Dao\Internaute\InternautePermissionDao.vb" />
     <Compile Include="Dao\Internaute\InternauteDao.vb" />
     <Compile Include="Dao\LigneDeVie\PatientParametreLdvDao.vb" />
