--- a/Oasis_Web/Oasis_Web.vbproj
+++ b/Oasis_Web/Oasis_Web.vbproj
@@ -193,6 +193,7 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.vb" />
     <Compile Include="Constants.vb" />
     <Compile Include="Controllers\AutoSuiviController.vb" />
+    <Compile Include="Controllers\CarnetVaccinalController.vb" />
     <Compile Include="Controllers\RenameController.vb" />
     <Compile Include="Controllers\DocFileUploadController.vb" />
     <Compile Include="Controllers\DocFileDownloadController.vb" />
@@ -204,6 +205,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\ParametreAutoSuivi.vb" />
+    <Compile Include="Models\UserRecover.vb" />
     <Compile Include="Models\UserLogin.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
@@ -1550,7 +1552,7 @@
     <Content Include="Scripts\umd\popper-utils.min.js" />
     <Content Include="Scripts\umd\popper.js" />
     <Content Include="Scripts\umd\popper.min.js" />
-    <Content Include="Views\Auth\auth-lock-screen.cshtml" />
+    <Content Include="Views\Auth\lock-screen.cshtml" />
     <Content Include="Scripts\jquery-3.5.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.5.1.min.map" />
     <Content Include="Scripts\umd\popper.min.js.map" />
@@ -1564,8 +1566,8 @@
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\Auth\login.vbhtml" />
-    <Content Include="Views\Auth\auth-recoverpw.cshtml" />
-    <None Include="Views\Auth\auth-register.vbhtml" />
+    <None Include="Views\Auth\recover.vbhtml" />
+    <None Include="Views\Auth\register.vbhtml" />
     <Content Include="Views\Dashboard\Index.vbhtml" />
     <Content Include="Views\Shared\Error.vbhtml" />
     <Content Include="Views\Shared\Layouts\_layout_boxed.cshtml" />
@@ -1596,6 +1598,7 @@
     <Content Include="Views\Pages\pages-timeline.cshtml" />
     <Content Include="Views\AutoSuivi\Index.vbhtml" />
     <Content Include="Views\Synthese\Index.vbhtml" />
+    <Content Include="Views\CarnetVaccinal\Index.vbhtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="favicon.ico" />
