--- a/Oasis_Common/packages.config
+++ b/Oasis_Common/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="BouncyCastle" version="1.8.6.1" targetFramework="net472" />
+  <package id="BouncyCastle" version="1.8.9" targetFramework="net472" />
+  <package id="GemBox.Document" version="33.0.1249" targetFramework="net472" />
   <package id="MailKit" version="2.13.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net472" />
   <package id="MimeKit" version="2.13.0" targetFramework="net472" />
