--- a/Oasis_Web/Web.config
+++ b/Oasis_Web/Web.config
@@ -7,6 +7,7 @@
   <configSections>
   </configSections>
   <appSettings>
+	  <add key="ServeurOasis" value="api.synovora.com" />
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
