--- a/oasis/Oasis_WF.vbproj
+++ b/oasis/Oasis_WF.vbproj
@@ -336,6 +336,12 @@
     <Compile Include="Form\Patient\RadFPatientRequestSelector.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Form\PPS\RadFPPSObsoletes.Designer.vb">
+      <DependentUpon>RadFPPSObsoletes.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form\PPS\RadFPPSObsoletes.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Form\RendezVous\RadFListeIntervenantSansRDV.Designer.vb">
       <DependentUpon>RadFListeIntervenantSansRDV.vb</DependentUpon>
     </Compile>
@@ -1161,6 +1167,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form\Patient\RadFPatientRequestSelector.resx">
       <DependentUpon>RadFPatientRequestSelector.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form\PPS\RadFPPSObsoletes.resx">
+      <DependentUpon>RadFPPSObsoletes.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form\RendezVous\RadFListeIntervenantSansRDV.resx">
       <DependentUpon>RadFListeIntervenantSansRDV.vb</DependentUpon>
